fixed scrollbar

--- a/assets/scss/components/Desktop/_gallery.scss
+++ b/assets/scss/components/Desktop/_gallery.scss
@@ -36,7 +36,6 @@
         img {
             margin: auto;
             position: relative;
-            // width: 100%;
             width: auto;
             height: 80vh;
             left: 50%;
@@ -68,6 +67,7 @@
 
         img {
             position: relative;
+            width: 15rem;
         }
     }
 }
